--- a/views/reverse.erb
+++ b/views/reverse.erb
@@ -8,7 +8,7 @@
 
   <body>
     <h1>The Ultimate String Reverser</h1>
-
+    <h2><%= @reversed_string %></h2>
     <form method="POST" action="/reverse">
       <input type="text" name="string">
       <input type="submit">
